fixed several layout bugs

--- a/Tests/QuadView/css/content.css
+++ b/Tests/QuadView/css/content.css
@@ -3,11 +3,11 @@
 */
 t-b {
   margin: 0.75rem 0rem;
-  max-width: 55rem;
+  max-width: 50rem;
 }
 .indent {
-  margin-left: 2rem;
-  margin-right: 2rem;
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
 }
 .left {
   float: left;
